--- a/index.html
+++ b/index.html
@@ -11,12 +11,47 @@
   </script>
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dooza agent | AI Employees That Never Sleep</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
+  <!-- Primary Meta Tags (Fallbacks - overridden by React Helmet) -->
+  <title>Dooza | AI Employees That Never Sleep</title>
+  <meta name="title" content="Dooza | AI Employees That Never Sleep" />
+  <meta name="description" content="Build, grow, and scale your business with a team of AI employees. Automate email, social media, lead generation, calls, and more." />
+  <meta name="keywords" content="AI employees, AI agents, business automation, AI for small business, email automation, social media AI" />
+  <meta name="author" content="Dooza Team" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#0d9488" />
+  
+  <!-- Favicon & Icons -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  
+  <!-- Canonical (Fallback) -->
+  <link rel="canonical" href="https://dooza.ai/" />
+  
+  <!-- Open Graph / Facebook (Fallbacks) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Dooza" />
+  <meta property="og:title" content="Dooza | AI Employees That Never Sleep" />
+  <meta property="og:description" content="Build, grow, and scale your business with a team of AI employees. Automate email, social media, lead generation, calls, and more." />
+  <meta property="og:image" content="https://dooza.ai/logo.png" />
+  <meta property="og:url" content="https://dooza.ai/" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter (Fallbacks) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@doaborto" />
+  <meta name="twitter:title" content="Dooza | AI Employees That Never Sleep" />
+  <meta name="twitter:description" content="Build, grow, and scale your business with a team of AI employees." />
+  <meta name="twitter:image" content="https://dooza.ai/logo.png" />
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
   
   <!-- Ahrefs Analytics -->
   <script src="https://analytics.ahrefs.com/analytics.js" data-key="ExUFJSiq7qufMJ0WMEpL+A" async></script>
