--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <!-- Twitter (Fallbacks) -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@doaborto" />
+  <meta name="twitter:site" content="@sibinarendran" />
   <meta name="twitter:title" content="Dooza | AI Employees That Never Sleep" />
   <meta name="twitter:description" content="Build, grow, and scale your business with a team of AI employees." />
   <meta name="twitter:image" content="https://dooza.ai/logo.png" />
