--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta name="description" content="Build, grow, and scale your business with a team of AI employees. Automate email, social media, lead generation, calls, and more." />
   <meta name="keywords" content="AI employees, AI agents, business automation, AI for small business, email automation, social media AI" />
   <meta name="author" content="Dooza Team" />
-  <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#0d9488" />
+  <!-- robots meta tag is handled by React Helmet in SEO.jsx -->
   
   <!-- Favicon & Icons -->
   <link rel="icon" type="image/png" href="/favicon.png" />
